deploy: dee8255842b5af235f9649a283e8137486896d68

--- a/index-all.html
+++ b/index-all.html
@@ -248,7 +248,7 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="com/zetaplugins/timberz/service/papi/PapiExpansion.html#getIdentifier()" class="member-name-link">getIdentifier()</a> - Method in class com.zetaplugins.timberz.service.papi.<a href="com/zetaplugins/timberz/service/papi/PapiExpansion.html" title="class in com.zetaplugins.timberz.service.papi">PapiExpansion</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="com/zetaplugins/timberz/service/TreeDetectionService.html#getLeafType(org.bukkit.Material)" class="member-name-link">getLeafType(Material)</a> - Method in class com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/TreeDetectionService.html" title="class in com.zetaplugins.timberz.service">TreeDetectionService</a></dt>
+<dt><a href="com/zetaplugins/timberz/service/TreeDetectionService.html#getLeafTypes(org.bukkit.Material)" class="member-name-link">getLeafTypes(Material)</a> - Method in class com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/TreeDetectionService.html" title="class in com.zetaplugins.timberz.service">TreeDetectionService</a></dt>
 <dd>
 <div class="block">Get the corresponding leaf type for a log type</div>
 </dd>
@@ -311,7 +311,9 @@ loadScripts(document, 'script');</script>
 <dt><a href="com/zetaplugins/timberz/service/MaterialTypeChecks.html#isAxe(org.bukkit.Material,org.bukkit.configuration.file.FileConfiguration)" class="member-name-link">isAxe(Material, FileConfiguration)</a> - Static method in class com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/MaterialTypeChecks.html" title="class in com.zetaplugins.timberz.service">MaterialTypeChecks</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="com/zetaplugins/timberz/service/MaterialTypeChecks.html#isLeafBlock(org.bukkit.Material,org.bukkit.configuration.file.FileConfiguration)" class="member-name-link">isLeafBlock(Material, FileConfiguration)</a> - Static method in class com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/MaterialTypeChecks.html" title="class in com.zetaplugins.timberz.service">MaterialTypeChecks</a></dt>
-<dd>&nbsp;</dd>
+<dd>
+<div class="block">Checks if a material is a leaf block based on the configuration</div>
+</dd>
 <dt><a href="com/zetaplugins/timberz/service/VersionChecker.html#isNewVersionAvailable()" class="member-name-link">isNewVersionAvailable()</a> - Method in class com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/VersionChecker.html" title="class in com.zetaplugins.timberz.service">VersionChecker</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="com/zetaplugins/timberz/service/MaterialTypeChecks.html#isValidAxe(org.bukkit.inventory.ItemStack,com.zetaplugins.timberz.TimberZ)" class="member-name-link">isValidAxe(ItemStack, TimberZ)</a> - Static method in class com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/MaterialTypeChecks.html" title="class in com.zetaplugins.timberz.service">MaterialTypeChecks</a></dt>
