deploy: acec139ffddc5c3319e1ada94c2ceed3f5585a28

--- a/com/zetaplugins/timberz/package-tree.html
+++ b/com/zetaplugins/timberz/package-tree.html
@@ -62,7 +62,7 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">org.bukkit.plugin.java.JavaPlugin
 <ul>
-<li class="circle">com.zetaplugins.timberz.<a href="TimberZ.html" class="type-name-link" title="class in com.zetaplugins.timberz">TimberZ</a> (implements org.bukkit.event.Listener)</li>
+<li class="circle">com.zetaplugins.timberz.<a href="TimberZ.html" class="type-name-link" title="class in com.zetaplugins.timberz">TimberZ</a></li>
 </ul>
 </li>
 </ul>
