--- a/com/zetaplugins/timberz/service/package-tree.html
+++ b/com/zetaplugins/timberz/service/package-tree.html
@@ -58,14 +58,17 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">java.lang.<a href="https://docs.oracle.com/en/java/javase/21/docs/api/java.base/java/lang/Object.html" class="type-name-link external-link" title="class or interface in java.lang">Object</a>
 <ul>
-<li class="circle">com.zetaplugins.timberz.service.<a href="ConfigService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">ConfigService</a></li>
+<li class="circle">com.zetaplugins.zetacore.services.config.ConfigService
+<ul>
+<li class="circle">com.zetaplugins.timberz.service.<a href="TzConfigService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">TzConfigService</a></li>
+</ul>
+</li>
 <li class="circle">com.zetaplugins.timberz.service.<a href="LocalizationService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">LocalizationService</a></li>
 <li class="circle">com.zetaplugins.timberz.service.<a href="MaterialTypeChecks.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">MaterialTypeChecks</a></li>
 <li class="circle">com.zetaplugins.timberz.service.<a href="MessageService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">MessageService</a></li>
 <li class="circle">com.zetaplugins.timberz.service.<a href="PlayerStateService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">PlayerStateService</a></li>
 <li class="circle">com.zetaplugins.timberz.service.<a href="TreeDetectionService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">TreeDetectionService</a></li>
 <li class="circle">com.zetaplugins.timberz.service.<a href="TreeFellerService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">TreeFellerService</a></li>
-<li class="circle">com.zetaplugins.timberz.service.<a href="VersionChecker.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">VersionChecker</a></li>
 </ul>
 </li>
 </ul>
