--- a/overview-tree.html
+++ b/overview-tree.html
@@ -58,9 +58,7 @@ loadScripts(document, 'script');</script>
 <li><a href="com/zetaplugins/timberz/listener/package-tree.html">com.zetaplugins.timberz.listener</a>, </li>
 <li><a href="com/zetaplugins/timberz/service/package-tree.html">com.zetaplugins.timberz.service</a>, </li>
 <li><a href="com/zetaplugins/timberz/service/auraskills/package-tree.html">com.zetaplugins.timberz.service.auraskills</a>, </li>
-<li><a href="com/zetaplugins/timberz/service/bstats/package-tree.html">com.zetaplugins.timberz.service.bstats</a>, </li>
 <li><a href="com/zetaplugins/timberz/service/papi/package-tree.html">com.zetaplugins.timberz.service.papi</a>, </li>
-<li><a href="com/zetaplugins/timberz/service/registrars/package-tree.html">com.zetaplugins.timberz.service.registrars</a>, </li>
 <li><a href="com/zetaplugins/timberz/service/worldguard/package-tree.html">com.zetaplugins.timberz.service.worldguard</a></li>
 </ul>
 <section class="hierarchy">
@@ -70,9 +68,12 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">com.zetaplugins.timberz.service.auraskills.<a href="com/zetaplugins/timberz/service/auraskills/AuraSkillsManager.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.auraskills">AuraSkillsManager</a></li>
 <li class="circle">com.zetaplugins.timberz.listener.<a href="com/zetaplugins/timberz/listener/AxeEquipListener.html" class="type-name-link" title="class in com.zetaplugins.timberz.listener">AxeEquipListener</a> (implements org.bukkit.event.Listener)</li>
-<li class="circle">com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/ConfigService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">ConfigService</a></li>
+<li class="circle">com.zetaplugins.zetacore.services.config.ConfigService
+<ul>
+<li class="circle">com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/TzConfigService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">TzConfigService</a></li>
+</ul>
+</li>
 <li class="circle">com.zetaplugins.timberz.dev.<a href="com/zetaplugins/timberz/dev/DevMode.html" class="type-name-link" title="class in com.zetaplugins.timberz.dev">DevMode</a></li>
-<li class="circle">com.zetaplugins.timberz.service.registrars.<a href="com/zetaplugins/timberz/service/registrars/EventRegistrar.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.registrars">EventRegistrar</a></li>
 <li class="circle">com.sk89q.worldguard.protection.flags.Flag&lt;T&gt;
 <ul>
 <li class="circle">com.sk89q.worldguard.protection.flags.StateFlag
@@ -86,21 +87,6 @@ loadScripts(document, 'script');</script>
 <li class="circle">com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/LocalizationService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">LocalizationService</a></li>
 <li class="circle">com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/MaterialTypeChecks.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">MaterialTypeChecks</a></li>
 <li class="circle">com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/MessageService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">MessageService</a></li>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics</a></li>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.CustomChart.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics.CustomChart</a>
-<ul>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.AdvancedBarChart.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics.AdvancedBarChart</a></li>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.AdvancedPie.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics.AdvancedPie</a></li>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.DrilldownPie.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics.DrilldownPie</a></li>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.MultiLineChart.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics.MultiLineChart</a></li>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.SimpleBarChart.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics.SimpleBarChart</a></li>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.SimplePie.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics.SimplePie</a></li>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.SingleLineChart.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics.SingleLineChart</a></li>
-</ul>
-</li>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.JsonObjectBuilder.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics.JsonObjectBuilder</a></li>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.JsonObjectBuilder.JsonObject.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics.JsonObjectBuilder.JsonObject</a></li>
-<li class="circle">com.zetaplugins.timberz.service.bstats.<a href="com/zetaplugins/timberz/service/bstats/Metrics.MetricsBase.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.bstats">Metrics.MetricsBase</a></li>
 <li class="circle">me.clip.placeholderapi.PlaceholderHook
 <ul>
 <li class="circle">me.clip.placeholderapi.expansion.PlaceholderExpansion
@@ -116,7 +102,7 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">org.bukkit.plugin.java.JavaPlugin
 <ul>
-<li class="circle">com.zetaplugins.timberz.<a href="com/zetaplugins/timberz/TimberZ.html" class="type-name-link" title="class in com.zetaplugins.timberz">TimberZ</a> (implements org.bukkit.event.Listener)</li>
+<li class="circle">com.zetaplugins.timberz.<a href="com/zetaplugins/timberz/TimberZ.html" class="type-name-link" title="class in com.zetaplugins.timberz">TimberZ</a></li>
 </ul>
 </li>
 </ul>
@@ -128,7 +114,6 @@ loadScripts(document, 'script');</script>
 <li class="circle">com.zetaplugins.timberz.listener.<a href="com/zetaplugins/timberz/listener/TreeBreakListener.html" class="type-name-link" title="class in com.zetaplugins.timberz.listener">TreeBreakListener</a> (implements org.bukkit.event.Listener)</li>
 <li class="circle">com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/TreeDetectionService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">TreeDetectionService</a></li>
 <li class="circle">com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/TreeFellerService.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">TreeFellerService</a></li>
-<li class="circle">com.zetaplugins.timberz.service.<a href="com/zetaplugins/timberz/service/VersionChecker.html" class="type-name-link" title="class in com.zetaplugins.timberz.service">VersionChecker</a></li>
 <li class="circle">com.zetaplugins.timberz.service.worldguard.<a href="com/zetaplugins/timberz/service/worldguard/WorldGuardManager.html" class="type-name-link" title="class in com.zetaplugins.timberz.service.worldguard">WorldGuardManager</a></li>
 </ul>
 </li>
